[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "recsys-demo"
version = "0.1.0"
description = "Recommendation system demo"
readme = "README"
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.21",
  "pandas>=1.3",
  "scikit-learn>=1.0",
  "scipy>=1.7",
  "matplotlib>=3.4"
  # 可选：需要再自行安装
  # "seaborn>=0.11",
  # "pyspark>=3.2",
  # "redis>=4.0"
]

[tool.setuptools]
packages = ["algorithms", "data", "utils"]
